feat: 사용자 기본 권한 및 권한 변경 기능 추가